# agentd

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  current_state.md  deploy.sh  pyproject.toml  requirements.txt
agentd/: __init__.py  __main__.py  agent.py  agent_constants.py
agentd/sub_agents/architecture_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/competitor_analysis_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/cost_estimation_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/idea_image_generation_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/idea_value_identifier_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/image_prompt_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/problem_identification_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/report_generation_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/social_media_post_generation_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/solution_analysis_agent/: __init__.py  agent.py  agent_constants.py
agentd/sub_agents/technical_advisor_agent/: __init__.py  (+2 more)
agentd/tools/: __init__.py  diagrams.py  image_generation.py
agentd/utils/: __init__.py  cloud_storage.py  cloud_storage_base.py  link_utils.py  links_injector_agent.py
flask-app/: app.py  routes.py  test.py  utils.py
react-app/: .env.development  build.sh  package.json  pnpm-lock.yaml
react-app/src/: App.tsx  index.css  types.ts  utils.ts
(+11 files in other folders)
